# evolution_beats_rl

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/grpo/: smoke.yaml  toy_0.5b.yaml
results/: spend.md
results/tables/: 00_baseline.md  01_grpo_toy.md
scripts/: smoke_test.sh
src/data/: gsm8k.py  rewards.py
src/eval/: compute.py  harness.py
src/grpo/: callbacks.py  train.py
src/utils/: seed.py
tests/: test_compute_counter.py  test_grpo_callbacks.py  test_grpo_config.py  test_grpo_dataset.py  test_gsm8k.py  test_reward_wiring.py  test_rewards.py  test_seed.py
