[project]
name = "es-vs-grpo"
version = "0.1.0"
description = "Compute-matched comparison of LoRA-space Evolution Strategies vs GRPO+RLVR on math reasoning"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Core ML
    "torch>=2.4,<2.6",
    "transformers>=4.45",
    "datasets>=3.0",
    # RL + PEFT
    "trl>=0.12",
    "peft>=0.13",
    # Generation
    "vllm>=0.6.3",
    # Eval
    "lm-eval>=0.4.5",
    # Logging + config
    "wandb>=0.18",
    "omegaconf>=2.3",
    # Utils
    "numpy>=1.26",
    "scipy>=1.13",
    "rich>=13.7",
    "tqdm>=4.66",
    # Math eval helpers (MATH-500 verifier needs sympy + latex2sympy2)
    "sympy>=1.13",
    "latex2sympy2>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ipython>=8.27",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter
