[project]
name = "es-vs-grpo"
version = "0.1.0"
description = "Compute-matched comparison of LoRA-space Evolution Strategies vs GRPO+RLVR on math reasoning"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Core ML — upper bounds keep us in the API surface CLAUDE.md was written
    # against (transformers 4.x, TRL 0.x GRPOTrainer). Relax once we verify the
    # newer majors don't break Phase 1 code.
    "torch>=2.4,<2.6",
    "transformers>=4.45,<5",
    "datasets>=3.0,<4",
    # RL + PEFT
    "trl>=0.12,<1",
    "peft>=0.13,<0.15",
    # Generation — pin <0.7 to stay with the vllm_mode="colocate" API TRL 0.12
    # was designed around.
    "vllm>=0.6.3,<0.7",
    # Eval
    "lm-eval>=0.4.5,<0.5",
    # Logging + config
    "wandb>=0.18",
    "omegaconf>=2.3",
    # Utils
    "numpy>=1.26",
    "scipy>=1.13",
    "rich>=13.7",
    "tqdm>=4.66",
    # Math eval helpers (GSM8K needs sympy only; MATH-500 latex normalization
    # is handled by lm-eval-harness's minerva_math pipeline per CLAUDE.md §11)
    "sympy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ipython>=8.27",
    "matplotlib>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter
