[project]
name = "es-vs-grpo"
version = "0.1.0"
description = "Compute-matched comparison of LoRA-space Evolution Strategies vs GRPO+RLVR on math reasoning"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Core ML — upper bounds keep us in the API surface CLAUDE.md was written
    # against (transformers 4.x, TRL 0.x GRPOTrainer). Relax once we verify the
    # newer majors don't break Phase 1 code.
    # torch >=2.6: trl 0.29 imports FSDPModule (torch.distributed.fsdp), which
    # doesn't exist in 2.5.x — found at GRPOTrainer import time on 2.5.1.
    "torch>=2.6,<2.9",
    "transformers>=4.45,<5",
    "datasets>=3.0,<4",
    # RL + PEFT
    "trl>=0.12,<1",
    "peft>=0.13,<0.15",
    # Generation: vLLM moved to `cloud` extras (CUDA-only; no usable MPS
    # backend). Toy phase uses transformers.generate() directly with
    # use_vllm=False in TRL.
    # Eval
    "lm-eval>=0.4.5,<0.5",
    # Logging + config
    "wandb>=0.18",
    "omegaconf>=2.3",
    # Utils
    "numpy>=1.26",
    "scipy>=1.13",
    "rich>=13.7",
    "tqdm>=4.66",
    # Math eval helpers (GSM8K needs sympy only; MATH-500 latex normalization
    # is handled by lm-eval-harness's minerva_math pipeline per CLAUDE.md §11)
    "sympy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ipython>=8.27",
    "matplotlib>=3.9",
]

# Cloud-only deps for Phase 4+ (Modal / RunPod / Lambda CUDA boxes). Not
# installed on M1 Pro toy phase: vllm has no usable MPS backend, and pulling
# it in transitively forces CUDA-bound wheels that fail to build on darwin.
# On the GPU box, install with: uv pip install -e ".[dev,cloud]"
# vllm >=0.7: 0.6.x requires torch 2.5.x, which trl 0.29 cannot run on
# (FSDPModule import). Colocate-mode API facts in CLAUDE.md §11 were written
# against 0.6.x — RE-VERIFY against the resolved vllm at Phase 4 start.
cloud = [
    "vllm>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter
